--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -16,3 +16,26 @@
     width: 100%;
     height: 100vh;
 }
+.leaflet-control-locate a {
+    display: none;
+  }
+
+.locate-button{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    z-index: 1000;
+    background-color: #fff;
+    border-radius: 50%;
+    padding: 10px;
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    border: none;
+    outline: none
+}
+.locate-button i{
+    color: #000;
+    font-size: 20px;
+}
