--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -16,14 +16,27 @@
     width: 100%;
     height: 100vh;
 }
+.right-side-bar{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 60px;
+    height: 100vh;
+    background-color: transparent;
+    padding: 20px 10px;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: start;
+    align-items: center;
+    overflow: hidden;
+    gap: 20px;
+    z-index: 1000;
+}
 .leaflet-control-locate a {
     display: none;
   }
 
 .locate-button{
-    position: absolute;
-    top: 10px;
-    right: 10px;
     width: 40px;
     height: 40px;
     z-index: 1000;
@@ -33,9 +46,17 @@
     cursor: pointer;
     box-shadow: 0 0 10px rgba(0,0,0,0.2);
     border: none;
-    outline: none
+    outline: none;
+    transition: all 0.3s;
 }
 .locate-button i{
-    color: #000;
+    color: #262626;
     font-size: 20px;
+    transition: all 0.3s;
+}
+.locate-button:hover{
+    scale: 1.1;
+}
+.locate-button.located i{
+    color: #007bff;
 }
