--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Rubik", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 #root {
   width: 100%;
@@ -112,7 +115,7 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   transition: all 0.3s;
   position: relative;
-  border-radius: 41% 42% 50% 50% / 33% 33% 58% 58%;
+  border-radius: 50%;
 }
 
 .marker-cluster::before {
@@ -141,7 +144,7 @@
 }
 @media only screen and (max-width: 768px) {
   .locate-button {
-    margin-bottom: 30px;
+    margin-bottom: 8lvh;
   }
   .zoom-buttons {
     display: none;
