--- a/assets/styles/search-box.css
+++ b/assets/styles/search-box.css
@@ -3,19 +3,22 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
   position: absolute;
   top: 10px;
-  left: 20px;
+  left: 10px;
   width: 400px;
   max-width: 400px;
   z-index: 2001;
-  background: white;
-  border-radius: 25px;
+  background: transparent;
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
   overflow: hidden;
   box-shadow: 0px 15px 35px -5px rgba(0, 0, 0, 0.247),
     0 0 5px rgba(0, 0, 0, 0.11);
+  transition: all 0.3s;
 }
+
 .search-form {
   display: flex;
   justify-content: center;
@@ -23,7 +26,6 @@
   gap: 3px;
   width: 100%;
   height: fit-content;
-  background: #f1f1f1;
   padding-right: 6px;
 }
 .search-form input {
@@ -64,15 +66,19 @@
 }
 
 .result {
-  max-height: 300px;
-  padding: 10px 15px 15px 15px;
+  max-height: 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
   background: white;
-  border-radius: 25px;
+  border-radius: 20px;
   overflow-y: auto;
+  transition: all 0.3s;
+}
+.search-box.input-focused .result {
+  max-height: 300px;
+  padding: 10px 15px 15px 15px;
 }
 .search-body {
   display: flex;
@@ -86,26 +92,35 @@
   font-size: 18px;
   margin-bottom: 10px;
   text-align: start;
-  color: teal;
+  font-weight: bold;
+  color: rgba(84, 84, 255, 0.925);
 }
-
+.search-items-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  gap: 10px;
+  width: 100%;
+  transition: all 0.3s;
+}
 .search-item {
   display: flex;
   gap: 10px;
   align-items: center;
   width: 100%;
-  padding: 10px 0;
-  border-bottom: 1px solid #f1f1f1;
+  padding: 10px 10px;
   cursor: pointer;
   border-radius: 10px;
   transition: all 0.3s;
+  background: rgb(248, 245, 255);
 }
 .search-item:hover {
   background: #f1f1f1;
 }
 .search-item img {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   object-fit: contain;
   border-radius: 50%;
 }
@@ -123,4 +138,54 @@
 .search-item .search-item-info p {
   font-size: 14px;
   color: #777;
+}
+.search-not-found {
+  font-size: 16px;
+  color: #777;
+  text-align: center;
+  padding: 20px 0px 10px 0px;
+  width: 100%;
+}
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  min-height: 150px;
+  position: relative;
+}
+.loading::before {
+  content: "";
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #3498db;
+  position: absolute;
+  animation: spin 1s linear infinite;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .search-box {
+    width: calc(100% - 20px);
+    max-width: 100%;
+    left: 10px;
+    top: 10px;
+    border-radius: 30px;
+  }
+  .search-box.input-focused {
+  }
+  .search-box.input-focused .result {
+    max-height: 300px;
+    padding: 10px 15px 15px 15px;
+  }
 }
