--- a/assets/styles/left-side-bar.css
+++ b/assets/styles/left-side-bar.css
@@ -26,7 +26,6 @@
   background: #f1f1f100;
 }
 
-
 .left-sidebar-container.open {
   bottom: 10px;
 }
@@ -159,4 +158,56 @@
   background: #ffffff2c;
   backdrop-filter: blur(10px);
   z-index: 600;
+}
+
+@media only screen and (max-width: 430px) {
+  .left-sidebar-container {
+    width: 100%;
+    max-width: 100%;
+    
+    border-radius: 0;
+    left: 0;
+  }
+  .left-sidebar-container.open {
+    bottom: 0px;
+  }
+  .left-sidebar-header {
+    flex-direction: column;
+    gap: 10px;
+    position: relative;
+  }
+  .left-sidebar-header img {
+    width: 100%;
+    height: auto;
+  }
+  .control-buttons {
+    flex-direction: column;
+  }
+  .control-buttons button {
+    width: 100%;
+  }
+  .direction{
+    width: 100%;
+    height: 35px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    gap: 10px;
+  }
+  .direction span{
+    all: unset;
+  }
+  .direction span::before {
+    display: none;
+  }
+  .direction:hover span {
+    top: 0;
+    opacity: 1;
+  }
+  .description,
+  .working-hours,
+  .contact-info {
+    padding: 10px;
+  }
 }
