--- a/assets/styles/left-side-bar.css
+++ b/assets/styles/left-side-bar.css
@@ -178,6 +178,7 @@
   }
   .left-sidebar-header img {
     width: 100%;
+    max-height: 150px;
     height: auto;
   }
   .control-buttons {
@@ -189,7 +190,7 @@
   .direction{
     width: 100%;
     height: 35px;
-    border-radius: 10px;
+    border-radius: 7px;
     display: flex;
     justify-content: center;
     align-items: center; 
@@ -205,9 +206,9 @@
     top: 0;
     opacity: 1;
   }
-  .description,
+  /* .description,
   .working-hours,
   .contact-info {
     padding: 10px;
-  }
+  } */
 }
