--- a/assets/styles/search-box.css
+++ b/assets/styles/search-box.css
@@ -179,7 +179,7 @@
     width: calc(100% - 20px);
     max-width: 100%;
     left: 10px;
-    top: 10px;
+    top: 4vh;
     border-radius: 30px;
   }
   .search-box.input-focused {
